examples/test/testpolicy10287.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10287
  namespace: namespace301
spec:
  podSelector:
    matchLabels:
      key7: value13
      key2: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value3
          key13: value38
      podSelector:
        matchLabels:
          key38: value38
          key3: value35
